{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 372,
  "lineage": "71305233-2779-f28f-8bcc-f5c3dafe7ee6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5c8e325b6e6b7f1",
            "associate_with_private_ip": "10.0.1.50",
            "domain": "vpc",
            "id": "eipalloc-0e5c8e325b6e6b7f1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-63-206.compute-1.amazonaws.com",
            "public_ip": "3.209.63.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092606623083:internet-gateway/igw-0d0555053c7a4a1f0",
            "id": "igw-0d0555053c7a4a1f0",
            "owner_id": "092606623083",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0d08aa4e123e8a2a5"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092606623083:loadbalancer/app/main-lb-tf/31bb7698d2c99ecd",
            "arn_suffix": "app/main-lb-tf/31bb7698d2c99ecd",
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-lb-tf-895452969.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:092606623083:loadbalancer/app/main-lb-tf/31bb7698d2c99ecd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-lb-tf",
            "security_groups": [
              "sg-0c017e3a2fd86b8c5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0177f8f85481b8940"
              },
              {
                "subnet_id": "subnet-0771aaf2b5e68188a"
              }
            ],
            "subnets": [
              "subnet-0177f8f85481b8940",
              "subnet-0771aaf2b5e68188a"
            ],
            "vpc_id": "vpc-0d08aa4e123e8a2a5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.subnetA",
            "aws_subnet.subnetAA",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092606623083:listener/app/main-lb-tf/31bb7698d2c99ecd/c4add790a0a0681f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:092606623083:targetgroup/MainAlbTgp/a9ed201f5ec8fa58",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:092606623083:listener/app/main-lb-tf/31bb7698d2c99ecd/c4add790a0a0681f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:092606623083:loadbalancer/app/main-lb-tf/31bb7698d2c99ecd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_tgp",
            "aws_security_group.web",
            "aws_subnet.subnetA",
            "aws_subnet.subnetAA",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092606623083:targetgroup/MainAlbTgp/a9ed201f5ec8fa58",
            "arn_suffix": "targetgroup/MainAlbTgp/a9ed201f5ec8fa58",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:092606623083:targetgroup/MainAlbTgp/a9ed201f5ec8fa58",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "MainAlbTgp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d08aa4e123e8a2a5"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat_G",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5c8e325b6e6b7f1",
            "connectivity_type": "public",
            "id": "nat-0e61df77b07cd93aa",
            "network_interface_id": "eni-0a1ef284aeeae0d7c",
            "private_ip": "10.0.1.128",
            "public_ip": "3.209.63.206",
            "subnet_id": "subnet-0771aaf2b5e68188a",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.lb1",
            "aws_internet_gateway.IG",
            "aws_subnet.subnetA",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092606623083:route-table/rtb-0d7269d09449cf9d8",
            "id": "rtb-0d7269d09449cf9d8",
            "owner_id": "092606623083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e61df77b07cd93aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "router1"
            },
            "tags_all": {
              "Name": "router1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08aa4e123e8a2a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb1",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat_G",
            "aws_subnet.subnetA",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092606623083:route-table/rtb-053ca8a987bec07d5",
            "id": "rtb-053ca8a987bec07d5",
            "owner_id": "092606623083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0555053c7a4a1f0",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0555053c7a4a1f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "router1"
            },
            "tags_all": {
              "Name": "router1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08aa4e123e8a2a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2ddd6dd82ef79b3",
            "route_table_id": "rtb-0d7269d09449cf9d8",
            "subnet_id": "subnet-07c7284f6114a4fb5"
          },
          "dependencies": [
            "aws_eip.lb1",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat_G",
            "aws_route_table.private_router",
            "aws_subnet.subnetA",
            "aws_subnet.subnetB",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c06fd74c3f1ab3aa",
            "route_table_id": "rtb-053ca8a987bec07d5",
            "subnet_id": "subnet-0771aaf2b5e68188a"
          },
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_route_table.public_router",
            "aws_subnet.subnetA",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a111cff772bccca",
            "route_table_id": "rtb-053ca8a987bec07d5",
            "subnet_id": "subnet-0177f8f85481b8940"
          },
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_route_table.public_router",
            "aws_subnet.subnetAA",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092606623083:security-group/sg-0c017e3a2fd86b8c5",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c017e3a2fd86b8c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "092606623083",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08aa4e123e8a2a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092606623083:subnet/subnet-0771aaf2b5e68188a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0771aaf2b5e68188a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092606623083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetA"
            },
            "tags_all": {
              "Name": "subnetA"
            },
            "vpc_id": "vpc-0d08aa4e123e8a2a5"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetAA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092606623083:subnet/subnet-0177f8f85481b8940",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0177f8f85481b8940",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092606623083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetAA"
            },
            "tags_all": {
              "Name": "subnetAA"
            },
            "vpc_id": "vpc-0d08aa4e123e8a2a5"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092606623083:subnet/subnet-07c7284f6114a4fb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c7284f6114a4fb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092606623083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetA"
            },
            "tags_all": {
              "Name": "subnetA"
            },
            "vpc_id": "vpc-0d08aa4e123e8a2a5"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092606623083:vpc/vpc-0d08aa4e123e8a2a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa7ec99de5e2bfe0",
            "default_route_table_id": "rtb-09c15dbbcf5645041",
            "default_security_group_id": "sg-098a2a9c7d3d49949",
            "dhcp_options_id": "dopt-0bc430a4ba2244a09",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d08aa4e123e8a2a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c15dbbcf5645041",
            "owner_id": "092606623083",
            "tags": {
              "Name": "first_range "
            },
            "tags_all": {
              "Name": "first_range "
            }
          }
        }
      ]
    }
  ]
}